--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/spring_hiber?verifyCertificate
 spring.datasource.username=root
 spring.datasource.password=Melody305??!
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+server.port=8081
 
 spring.thymeleaf.cache=false
 spring.thymeleaf.enabled=true
@@ -12,6 +13,7 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 #\u0437\u0430\u043F\u0443\u0441\u043A\u0430\u0435\u0442 data.html \u043F\u043E\u0441\u043B\u0435 \u0441\u043E\u0437\u0434\u0430\u043D\u0438\u044F \u0442\u0430\u0431\u043B\u0438\u0446
 #spring.jpa.defer-datasource-initialization=true
+
 spring.sql.init.mode=always
 spring.sql.init.data-locations=classpath:data.sql
 spring.mvc.hiddenmethod.filter.enabled=true
@@ -21,4 +23,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialec
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type=TRACE
 logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.security=TRACE
 spring.devtools.livereload.enabled=false
